@@ -84,14 +84,14 @@ void ConvertToIeeeExtended(double num, unsigned char *bytes)
 
 	bytes[0] = expon >> 8;
 	bytes[1] = expon;
-	bytes[2] = hiMant >> 24;
-	bytes[3] = hiMant >> 16;
-	bytes[4] = hiMant >> 8;
-	bytes[5] = hiMant;
-	bytes[6] = loMant >> 24;
-	bytes[7] = loMant >> 16;
-	bytes[8] = loMant >> 8;
-	bytes[9] = loMant;
+	bytes[2] = (unsigned char) hiMant >> 24;
+	bytes[3] = (unsigned char) hiMant >> 16;
+	bytes[4] = (unsigned char) hiMant >> 8;
+	bytes[5] = (unsigned char) hiMant;
+	bytes[6] = (unsigned char) loMant >> 24;
+	bytes[7] = (unsigned char) loMant >> 16;
+	bytes[8] = (unsigned char) loMant >> 8;
+	bytes[9] = (unsigned char) loMant;
 }
 
 /*
